Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27913

innodb_ft_cache_size max possible value (80000000) is too small for practical purposes

    XMLWordPrintable

Details

    Description

      It seems innodb_ft_cache_size is NOT dynamic (see upstream https://bugs.mysql.com/bug.php?id=75386) and accepts values only up to 80000000:

      2022-02-22 14:42:29 0 [Warning] option 'innodb-ft-cache-size': unsigned value 2000000000 adjusted to 80000000
      

      This is too small and causes problem like MDEV-25581 that can not be workarounded as a result.

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              valerii Valerii Kravchuk
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: