storage/innobase/fts/fts0fts.cc
@@ -53,14 +53,26 @@ by looking up the key word in the obsolete table names */
 
 /** This is maximum FTS cache for each table and would be
 a configurable variable */
-ulong	fts_max_cache_size;
+size_t	fts_max_cache_size;
+
+static size_t fts_get_max_cache()
+{
+#if UNIV_WORD_SIZE == 4
+  return my_atomic_load32_explicit(&fts_max_cache_size,
+                                   MY_MEMORY_ORDER_RELAXED);
+#else
+  return my_atomic_load64_explicit(
+	reinterpret_cast<int64*>(&fts_max_cache_size),
+        MY_MEMORY_ORDER_RELAXED);
+#endif
+}
 
 /** Whether the total memory used for FTS cache is exhausted, and we will
 need a sync to free some memory */
 bool	fts_need_sync = false;
 
 /** Variable specifying the total memory allocated for FTS cache */
-ulong	fts_max_total_cache_size;
+size_t	fts_max_total_cache_size;
 
 /** This is FTS result cache limit for each query and would be
 a configurable variable */
@@ -3381,7 +3393,7 @@ fts_add_doc_from_tuple(
 
                        rw_lock_x_unlock(&table->fts->cache->lock);
 
-                       if (cache->total_size > fts_max_cache_size / 5
+                       if (cache->total_size > fts_get_max_cache() / 5
                            || fts_need_sync) {
                                fts_sync(cache->sync, true, false);
                        }
@@ -3546,7 +3558,7 @@ fts_add_doc_by_id(
 					&& (fts_need_sync
 					    || (cache->total_size
 						- cache->total_size_at_sync)
-					    > fts_max_cache_size / 10);
+					    > fts_get_max_cache() / 10);
 				if (need_sync) {
 					cache->total_size_at_sync =
 						cache->total_size;
@@ -4284,7 +4296,7 @@ fts_sync(
 	ulint		i;
 	dberr_t		error = DB_SUCCESS;
 	fts_cache_t*	cache = sync->table->fts->cache;
-
+	size_t		fts_cache_size= 0;
 	rw_lock_x_lock(&cache->lock);
 
 	/* Check if cache is being synced.
@@ -4309,11 +4321,17 @@ fts_sync(
 	fts_sync_begin(sync);
 
 begin_sync:
-	if (cache->total_size > fts_max_cache_size) {
+	fts_cache_size= fts_get_max_cache();
+	if (cache->total_size > fts_cache_size) {
 		/* Avoid the case: sync never finish when
 		insert/update keeps comming. */
 		ut_ad(sync->unlock_cache);
 		sync->unlock_cache = false;
+		ib::warn() << "Total InnoDB FTS size "
+			<< cache->total_size << " for the table "
+			<< cache->sync->table->name
+			<< " exceeds the innodb_ft_cache_size "
+			<< fts_cache_size;
 	}
 
 	for (i = 0; i < ib_vector_size(cache->indexes); ++i) {
@@ -4335,6 +4353,13 @@ begin_sync:
 
 		if (error != DB_SUCCESS) {
 			goto end_sync;
+		}
+
+		if (!sync->unlock_cache
+		    && cache->total_size < fts_get_max_cache()) {
+			/* Reset the unlock cache if the value
+			is less than innodb_ft_cache_size */
+			sync->unlock_cache = true;
 		}
 	}
 
